...
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/menu"
            app:navigationIcon="@drawable/ic_arrow_left_line"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSearchBar"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:maxLines="1"
...
