<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listUserFragment">

    <fragment
        android:id="@+id/listUserFragment"
        android:name="robi.technicaltest.githubuser.ui.listusers.ListUserFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_list_user">
...
